add addserverview