@@ -106,6 +106,12 @@
         <sourceDirectory>src/main/java</sourceDirectory>
         <resources>
             <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+            <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
             </resource>
@@ -121,6 +127,7 @@
                         <arg>--add-modules=javafx.base</arg>
                         <arg>--add-modules=javafx.fxml</arg>
                         <arg>--add-modules=javafx.graphics</arg>
+                        <arg>--add-modules=javafx.controls</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -151,7 +158,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ch.rootlogin.godocstore.viewer.GUI</mainClass>
+                                    <mainClass>ch.rootlogin.godocstore.viewer.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
